# practice-physics

./: .gitignore  Home.py  README.md  app.py  pyproject.toml
pages/: 1_Practice.py  2_Leaderboard.py
util/: db.py  model.py
utils/: db.py  model.py
